k8/service.yml
apiVersion: v1
kind: Namespace
metadata:
  name: production
---
apiVersion: v1
kind: Service
metadata:
  name: fsl-service
  namespace: production
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: web
  selector:
    app: fsl-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fsl-app
  namespace: production
spec:
  serviceName: "fsl-service"
  replicas: 3
  selector:
    matchLabels:
      app: fsl-app
  template:
    metadata:
      labels:
        app: fsl-app
    spec:
      containers:
      - name: fsl-container
        image: luisrivas35/fsl-challenge:v1
        ports:
        - containerPort: 8080
